cmake_minimum_required(VERSION 2.8)  
project(A_star)  
find_package(OpenCV REQUIRED)  
message(STATUS "Opencv libiary status:")
message(STATUS"   version:${OpenCV_VERSION}")
message(STATUS"   libiary:${OpenCV_LIBS}")
message(STATUS"   include_path:${OpenCV_INCLUDE_DIRS}")
add_executable(A_star main.cpp)  
target_link_libraries(A_star ${OpenCV_LIBS})
